Renamed vars to proper logical names

--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -481,10 +481,10 @@
   }
 
   .#{$text-input-group} {
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderBlockStartInlineStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderBlockStartInlineEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderBlockEndInlineEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderBlockEndInlineStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
+    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderStartStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
+    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderStartEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
+    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderEndEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
+    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderEndStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
 
     --#{$text-input-group}__utilities--c-button--PaddingInlineEnd: var(--#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingInlineEnd);
     --#{$text-input-group}__utilities--MarginInlineEnd: 0;
