--- a/src/patternfly/utilities/Sizing/examples/Sizing.css
+++ b/src/patternfly/utilities/Sizing/examples/Sizing.css
@@ -3,6 +3,6 @@
 .pf-v6-u-min-height,
 .pf-v6-u-max-height,
 .ws-example-u-sizing-item {
-  padding: .5rem !important;
-  border: 2px dashed #393f44;
+  padding: var(--pf-t--global--spacer--sm);
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
