--- a/src/patternfly/utilities/Flex/examples/Flex.css
+++ b/src/patternfly/utilities/Flex/examples/Flex.css
@@ -2,8 +2,8 @@
 .ws-core-u-flex .ws-example-flex-item,
 .ws-core-u-flex .pf-v6-u-display-inline-flex {
   flex-wrap: wrap;
-  padding: .5rem !important;
-  border: 2px dashed #393f44;
+  padding: var(--pf-t--global--spacer--sm);
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
 
 #ws-core-u-flex-aligned-items .pf-v6-u-display-flex,
