--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 01 May 2024 14:26:30 GMT
+// Generated on Tue, 07 May 2024 18:55:08 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
@@ -97,6 +97,12 @@
   --pf-t--global--color--nonstatus--red--300: var(--pf-t--color--red--40);
   --pf-t--global--color--nonstatus--red--200: var(--pf-t--color--red--30);
   --pf-t--global--color--nonstatus--red--100: var(--pf-t--color--red--20);
+  --pf-t--global--color--severity--critical--100: var(--pf-t--color--red-orange--60);
+  --pf-t--global--color--severity--important--100: var(--pf-t--color--orange--50);
+  --pf-t--global--color--severity--moderate--100: var(--pf-t--color--yellow--40);
+  --pf-t--global--color--severity--minor--100: var(--pf-t--color--gray--50);
+  --pf-t--global--color--severity--none--100: var(--pf-t--color--blue--40);
+  --pf-t--global--color--severity--undefined--100: var(--pf-t--color--gray--30);
   --pf-t--global--color--status--custom--200: var(--pf-t--color--teal--70);
   --pf-t--global--color--status--custom--100: var(--pf-t--color--teal--60);
   --pf-t--global--color--status--info--200: var(--pf-t--color--purple--60);
@@ -237,6 +243,7 @@
   --pf-t--global--text--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--text--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--text--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
+  --pf-t--global--text--color--on-highlight: var(--pf-t--global--text--color--100);
   --pf-t--global--text--color--required: var(--pf-t--global--text--color--400);
   --pf-t--global--text--color--on-disabled: var(--pf-t--global--color--disabled--300);
   --pf-t--global--text--color--disabled: var(--pf-t--global--color--disabled--200);
@@ -346,12 +353,19 @@
   --pf-t--global--border--color--nonstatus--red--hover: var(--pf-t--global--color--nonstatus--red--300);
   --pf-t--global--border--color--nonstatus--red--default: var(--pf-t--global--color--nonstatus--red--200);
   --pf-t--global--border--color--on-secondary: var(--pf-t--global--border--color--300);
+  --pf-t--global--border--color--disabled: var(--pf-t--global--color--disabled--200);
   --pf-t--global--border--color--clicked: var(--pf-t--global--color--brand--200);
   --pf-t--global--border--color--hover: var(--pf-t--global--color--brand--100);
   --pf-t--global--border--color--default: var(--pf-t--global--border--color--100);
   --pf-t--global--border--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--border--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--border--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
+  --pf-t--global--icon--color--severity--critical--default: var(--pf-t--global--color--severity--critical--100);
+  --pf-t--global--icon--color--severity--important--default: var(--pf-t--global--color--severity--important--100);
+  --pf-t--global--icon--color--severity--moderate--default: var(--pf-t--global--color--severity--moderate--100);
+  --pf-t--global--icon--color--severity--minor--default: var(--pf-t--global--color--severity--minor--100);
+  --pf-t--global--icon--color--severity--none--default: var(--pf-t--global--color--severity--none--100);
+  --pf-t--global--icon--color--severity--undefined--default: var(--pf-t--global--color--severity--undefined--100);
   --pf-t--global--icon--color--on-disabled: var(--pf-t--global--color--disabled--300);
   --pf-t--global--icon--color--disabled: var(--pf-t--global--color--disabled--200);
   --pf-t--global--icon--color--inverse: var(--pf-t--global--icon--color--300);
@@ -436,15 +450,14 @@
   --pf-t--global--text--color--on-brand--hover: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--on-brand--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--color--status--read--on-primary: var(--pf-t--global--background--color--secondary--default);
-  --pf-t--global--color--status--unread--attention--clicked: var(--pf-t--global--color--status--danger--clicked);
   --pf-t--global--color--status--unread--attention--hover: var(--pf-t--global--color--status--danger--hover);
+  --pf-t--global--color--status--unread--attention--clicked: var(--pf-t--global--color--status--danger--clicked);
   --pf-t--global--color--status--unread--attention--default: var(--pf-t--global--color--status--danger--default);
   --pf-t--global--color--status--unread--default--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--color--status--unread--default--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--color--status--unread--default--default: var(--pf-t--global--color--brand--default);
   --pf-t--global--background--color--control--default: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--alt: var(--pf-t--global--background--color--primary--default);
-  --pf-t--global--border--color--disabled: var(--pf-t--global--background--color--disabled--default);
   --pf-t--global--border--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--border--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
   --pf-t--global--border--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
