--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -1,8 +1,9 @@
 @use '../../sass-utilities' as *;
 
 :where(:root, .#{$wizard}) {
-  --#{$wizard}--Height: 100%;
-  --#{$modal-box}--c-wizard--FlexBasis: #{pf-size-prem(762px)}; // this is a specific height from design for the wizard in a modal
+  --#{$wizard}--Height: initial;
+  --#{$wizard}--Height--base: 100%;
+  --#{$modal-box}--c-wizard--Height--base: #{pf-size-prem(762px)}; // this is a specific height from design for the wizard in a modal
 
   // Header
   --#{$wizard}__header--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
@@ -176,11 +177,11 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: var(--#{$wizard}--Height);
+  height: var(--#{$wizard}--Height, var(--#{$wizard}--Height--base));
 
   // When the wizard is used in a modal
   .#{$modal-box} & {
-    flex: 1 1 var(--#{$modal-box}--c-wizard--FlexBasis);
+    flex: 1 1 var(--#{$wizard}--Height, var(--#{$modal-box}--c-wizard--Height--base));
     min-height: 0;
   }
 
