fix(display-utility): added grid, inline grid, docs

--- a/src/patternfly/utilities/Display/display.scss
+++ b/src/patternfly/utilities/Display/display.scss
@@ -10,7 +10,9 @@ $pf-v5-u-display-options: (
   display-table-cell:     (display table-cell),
   display-table-row:      (display table-row),
   display-flex:           (display flex),
-  display-inline-flex:    (display inline-flex)
+  display-inline-flex:    (display inline-flex),
+  display-grid:           (display grid),
+  display-inline-grid:    (display inline-grid),
 );
 
 @include pf-v5-utility-builder($pf-v5-u-display-options, $pf-v5-global--breakpoint-list);
