--- a/src/patternfly/components/Toolbar/toolbar-group.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-group.hbs
@@ -1,7 +1,7 @@
 <div class="{{pfv}}toolbar__group
   {{setModifiers
-    toolbar-group--IsChipGroupContainer='pf-m-chip-group-container'
-    toolbar-group--IsChipGroup='pf-m-chip-group'
+    toolbar-group--IsLabelGroupContainer='pf-m-label-group-container'
+    toolbar-group--IsLabelGroup='pf-m-label-group'
     toolbar-group--modifier=toolbar-group--modifier
   }}"
   {{#if toolbar-group--attribute}}
