chore(badge): add disabled modifier

--- a/src/patternfly/components/Badge/badge.hbs
+++ b/src/patternfly/components/Badge/badge.hbs
@@ -1,5 +1,6 @@
 <span class="{{pfv}}badge
   {{#if badge--IsUnread}}pf-m-unread {{/if}}
+  {{#if badge--IsDisabled}}pf-m-disabled {{/if}}
   {{#if badge--modifier}} {{badge--modifier}}{{/if}}"
   {{#if badge--attribute}}
     {{{badge--attribute}}}
