--- a/src/patternfly/components/Hint/hint.scss
+++ b/src/patternfly/components/Hint/hint.scss
@@ -59,7 +59,7 @@
   margin-inline-start: var(--#{$hint}__actions--MarginInlineStart);
   text-align: end;
 
-  &:is(.#{$menu-toggle}.pf-m-plain, .#{$dropdown} .#{$dropdown}__toggle.pf-m-plain) {
+  .#{$menu-toggle}.pf-m-plain {
     margin-block-start: var(--#{$hint}__actions--c-menu-toggle--MarginBlockStart);
   }
 
